# c-text

./: .clangd  .gitignore  Makefile  README.md  config.ini  meson.build
inc/: argument_parser.hpp  command.hpp  command_handler.hpp  command_logic.hpp  config_parser.hpp  cursor.hpp  cursor_logic.hpp  cursor_renderer.hpp  editor.hpp  file_handler.hpp  input.hpp  input_handler.hpp  input_logic.hpp  logging_utility.hpp  sdl_helper.hpp  utilities.hpp
src/: argument_parser.cpp  command_handler.cpp  command_logic.cpp  config_parser.cpp  cursor_logic.cpp  cursor_renderer.cpp  editor.cpp  file_handler.cpp  input_handler.cpp  input_logic.cpp  logging_utility.cpp  main.cpp  sdl_helper.cpp  utilities.cpp
src/command/: command_handler.cpp  logic.cpp
src/cursor/: cursor_renderer.cpp  logic.cpp  renderer.cpp
src/input/: input_handler.cpp  input_logic.cpp
